feat: update package.json scripts for Cypress testing and add new E2E test specifications
feat: enhance main.js with demo links for projects and improve project card rendering

ci: add GitHub Actions workflows for Cypress E2E tests with and without dev server

docs: create TEST_CASES.md for documenting test cases

test: implement comprehensive E2E tests for portfolio website in portfolio.cy.js

chore: add example fixture data for Cypress tests

refactor: create custom commands and page object model for portfolio page interactions

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Cypress
+cypress/screenshots
+cypress/videos
+cypress/downloads
+
+# Dependencies
 node_modules
 dist
-dist-ssr
+.DS_Store
 *.local
 
 # Editor directories and files
