refactor: apply GitHub Actions best practices for CI/CD workflows
- Replace npm install with npm ci for reproducibility and speed
- Add timeout protection to prevent hanging jobs (15min for tests, 10min for build, 5min for deploy)
- Add Cypress artifacts upload (screenshots, videos, test results) for better debugging
- Add wait-on-timeout and fail-fast: false for better test reliability
- Remove workaround that deletes package-lock.json (anti-pattern)
- Update artifact retention policies (7 days for media, 30 days for reports)

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -17,6 +17,7 @@ concurrency:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout
@@ -29,9 +30,7 @@ jobs:
           cache: npm
       
       - name: Install dependencies
-        run: |
-          rm -rf node_modules package-lock.json
-          npm install
+        run: npm ci
       
       - name: Build
         run: npm run build
@@ -47,6 +46,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     needs: build
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
