--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -29,6 +29,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # Workaround untuk bug npm + Rollup optional dependencies di Linux
+      # https://github.com/npm/cli/issues/4828
+      - name: Fix Rollup optional dependencies
+        run: npm install --force @rollup/rollup-linux-x64-gnu
+
       - name: Run Cypress E2E Tests
         uses: cypress-io/github-action@v6
         with:
