--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      # Workaround untuk bug npm + Rollup optional dependencies di Linux
+      # https://github.com/npm/cli/issues/4828
+      - name: Fix Rollup optional dependencies
+        run: npm install --force @rollup/rollup-linux-x64-gnu
+      
       - name: Build
         run: npm run build
       
