chore: cleanup old test file and add CI/CD execution guide
Changes:
- Remove old portfolio.cy.js (20 tests) to avoid duplication
- Update package.json with individual test suite scripts
- Add CI_CD_TEST_EXECUTION.md comprehensive guide

New npm scripts:
- test:e2e:smoke - Run smoke tests only
- test:e2e:nav - Run navigation tests only
- test:e2e:theme - Run theme toggle tests only
- test:e2e:links - Run links tests only
- test:e2e:responsive - Run responsive tests only
- test:e2e:content - Run content validation tests only

CI/CD Execution:
- Command: npm run test:e2e (runs ALL 6 test files)
- Total: 113 test cases
- Execution time: ~5 minutes
- Trigger: Push/PR to main or develop branches

Documentation:
- Add CI_CD_TEST_EXECUTION.md with detailed execution flow
- Explain which files run in CI/CD
- Provide manual execution commands
- Include troubleshooting guide

--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "preview": "vite preview",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
-    "cypress:run:spec": "cypress run --spec 'cypress/e2e/portfolio.cy.js'",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "test:e2e:smoke": "cypress run --spec 'cypress/e2e/01-smoke-tests.cy.js'",
+    "test:e2e:nav": "cypress run --spec 'cypress/e2e/02-navigation-tests.cy.js'",
+    "test:e2e:theme": "cypress run --spec 'cypress/e2e/03-theme-toggle-tests.cy.js'",
+    "test:e2e:links": "cypress run --spec 'cypress/e2e/04-links-tests.cy.js'",
+    "test:e2e:responsive": "cypress run --spec 'cypress/e2e/05-responsive-tests.cy.js'",
+    "test:e2e:content": "cypress run --spec 'cypress/e2e/06-content-validation-tests.cy.js'"
   },
   "devDependencies": {
     "cypress": "^15.7.1",
