chore: Update .gitignore to exclude Cypress artifacts
- Add screenshots/ and videos/ directories to .gitignore
- Remove previously committed Cypress test artifacts
- Add cypress-result.json and mochawesome-report/ to ignore list
- Prevent test videos and screenshots from being tracked in git

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,12 @@ lerna-debug.log*
 cypress/screenshots
 cypress/videos
 cypress/downloads
+cypress/results
+cypress-result.json
+screenshots/
+videos/
+*.mp4
+mochawesome-report/
 
 # Dependencies
 node_modules
