--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,74 +1,45 @@
-name: Cypress Tests
-
-on: 
-  push:
-    branches:
-      - main
-      - develop
-  pull_request:
-    branches:
-      - main
-      - develop
+name: Cypress Tests with Dashboard
+on: [push, pull_request]
 
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
-    
-    # Runs tests in parallel with matrix strategy
-    # https://docs.cypress.io/guides/guides/parallelization
+    # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
+    # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
+    # Also see warning here https://github.com/cypress-io/github-action#parallel
     strategy:
-      fail-fast: false
+      fail-fast: false # https://github.com/cypress-io/github-action/issues/48
       matrix:
         containers: [1, 2] # Uses 2 parallel instances
-    
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '22'
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
+
       - name: Cypress run
+        # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v6
         with:
-          # Start Vite dev server
+          # Starts Vite dev server for E2E tests
+          # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
           start: npm run dev
-          # Wait for Vite server to be ready
-          wait-on: 'http://localhost:5173'
+          wait-on: 'http://localhost:5173' # Vite default port
           wait-on-timeout: 120
-          # Browser to use
-          browser: chrome
           # Records to Cypress Cloud
+          # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
           record: true
-          parallel: true
-          # Group tests for better organization in Cypress Dashboard
-          group: 'E2E Tests'
-          # Tag the run
-          tag: ${{ github.event_name }}
+          parallel: true # Runs test in parallel using settings above
         env:
-          # Cypress Cloud record key
+          # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
+          # in GitHub repo → Settings → Secrets → Actions
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
-          # GitHub token for Cypress GitHub integration
+          # Creating a token https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/creating-a-personal-access-token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Upload screenshots on failure
-        uses: actions/upload-artifact@v4
-        if: failure()
-        with:
-          name: cypress-screenshots-${{ matrix.containers }}
-          path: cypress/screenshots
-          if-no-files-found: ignore
-      
-      - name: Upload videos
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: cypress-videos-${{ matrix.containers }}
-          path: cypress/videos
-          if-no-files-found: ignore
