--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -24,6 +24,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      # Workaround for npm + Rollup optional dependencies bug on Linux
+      # https://github.com/npm/cli/issues/4828
+      - name: Fix Rollup optional dependencies
+        run: npm install --force @rollup/rollup-linux-x64-gnu
+
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v6
